undersea-agent/dsl/src/main/java/com/type2labs/undersea/dsl/uuv/gen/UUVParser.java
// Generated from UUV.g4 by ANTLR 4.7.2

package com.type2labs.undersea.dsl.uuv.gen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UUVParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, ASSIGN = 6, MISSION_NAME = 7, NAME = 8,
            TIME_WINDOW = 9, SERVER_HOST = 10, SENSORS = 11, DOUBLE = 12, PORT_START = 13, SENSOR_PORT = 14,
            SIMULATION_TIME = 15, SIMULATION_SPEED = 16, INT = 17, IP = 18, OCTET = 19, BEGL = 20,
            ENDL = 21, SEP = 22, SPEED = 23, ID = 24, WS = 25, ErrorCharacter = 26;
    public static final int
            RULE_model = 0, RULE_sensorPort = 1, RULE_missionName = 2, RULE_portStart = 3,
            RULE_simulation = 4, RULE_speed = 5, RULE_invocation = 6, RULE_host = 7,
            RULE_list = 8, RULE_elems = 9, RULE_elem = 10, RULE_uuv = 11;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public UUVParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'localhost'", "'UUV'", "'{'", "':'", "'}'", "'='", "'mission name'",
                "'name'", "'time window'", "'host'", "'sensors'", null, "'server port start'",
                "'sensor port'", "'simulation time'", "'simulation speed'", null, null,
                null, "'['", "']'", "','", "'speed'"
        };
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "model", "sensorPort", "missionName", "portStart", "simulation", "speed",
                "invocation", "host", "list", "elems", "elem", "uuv"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, "ASSIGN", "MISSION_NAME", "NAME",
                "TIME_WINDOW", "SERVER_HOST", "SENSORS", "DOUBLE", "PORT_START", "SENSOR_PORT",
                "SIMULATION_TIME", "SIMULATION_SPEED", "INT", "IP", "OCTET", "BEGL",
                "ENDL", "SEP", "SPEED", "ID", "WS", "ErrorCharacter"
        };
    }

    public final ElemContext elem() throws RecognitionException {
        ElemContext _localctx = new ElemContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_elem);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElemsContext elems() throws RecognitionException {
        ElemsContext _localctx = new ElemsContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_elems);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                elem();
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == SEP) {
                    {
                        {
                            setState(75);
                            match(SEP);
                            setState(76);
                            elem();
                        }
                    }
                    setState(81);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public String getGrammarFileName() {
        return "UUV.g4";
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final HostContext host() throws RecognitionException {
        HostContext _localctx = new HostContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_host);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(SERVER_HOST);
                setState(65);
                match(ASSIGN);
                setState(66);
                ((HostContext) _localctx).value = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == T__0 || _la == IP)) {
                    ((HostContext) _localctx).value = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InvocationContext invocation() throws RecognitionException {
        InvocationContext _localctx = new InvocationContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_invocation);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(TIME_WINDOW);
                setState(61);
                match(ASSIGN);
                setState(62);
                ((InvocationContext) _localctx).value = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == DOUBLE || _la == INT)) {
                    ((InvocationContext) _localctx).value = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ListContext list() throws RecognitionException {
        ListContext _localctx = new ListContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(BEGL);
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(69);
                        elems();
                    }
                }

                setState(72);
                match(ENDL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MissionNameContext missionName() throws RecognitionException {
        MissionNameContext _localctx = new MissionNameContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_missionName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                match(MISSION_NAME);
                setState(45);
                match(ASSIGN);
                setState(46);
                ((MissionNameContext) _localctx).value = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ModelContext model() throws RecognitionException {
        ModelContext _localctx = new ModelContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_model);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(36);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(36);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case MISSION_NAME: {
                                setState(24);
                                missionName();
                            }
                            break;
                            case PORT_START: {
                                setState(25);
                                portStart();
                            }
                            break;
                            case SENSOR_PORT: {
                                setState(26);
                                sensorPort();
                            }
                            break;
                            case SIMULATION_TIME: {
                                setState(27);
                                simulation();
                            }
                            break;
                            case TIME_WINDOW: {
                                setState(28);
                                invocation();
                            }
                            break;
                            case SERVER_HOST: {
                                setState(29);
                                host();
                            }
                            break;
                            case SIMULATION_SPEED: {
                                setState(30);
                                speed();
                            }
                            break;
                            case T__1: {
                                setState(32);
                                _errHandler.sync(this);
                                _alt = 1;
                                do {
                                    switch (_alt) {
                                        case 1: {
                                            {
                                                setState(31);
                                                uuv();
                                            }
                                        }
                                        break;
                                        default:
                                            throw new NoViableAltException(this);
                                    }
                                    setState(34);
                                    _errHandler.sync(this);
                                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(38);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << MISSION_NAME) | (1L << TIME_WINDOW) | (1L << SERVER_HOST) | (1L << PORT_START) | (1L << SENSOR_PORT) | (1L << SIMULATION_TIME) | (1L << SIMULATION_SPEED))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PortStartContext portStart() throws RecognitionException {
        PortStartContext _localctx = new PortStartContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_portStart);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                match(PORT_START);
                setState(49);
                match(ASSIGN);
                setState(50);
                ((PortStartContext) _localctx).value = match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SensorPortContext sensorPort() throws RecognitionException {
        SensorPortContext _localctx = new SensorPortContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_sensorPort);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                match(SENSOR_PORT);
                setState(41);
                match(ASSIGN);
                setState(42);
                ((SensorPortContext) _localctx).value = match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SimulationContext simulation() throws RecognitionException {
        SimulationContext _localctx = new SimulationContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_simulation);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                match(SIMULATION_TIME);
                setState(53);
                match(ASSIGN);
                setState(54);
                ((SimulationContext) _localctx).value = match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SpeedContext speed() throws RecognitionException {
        SpeedContext _localctx = new SpeedContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_speed);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                match(SIMULATION_SPEED);
                setState(57);
                match(ASSIGN);
                setState(58);
                ((SpeedContext) _localctx).value = match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UuvContext uuv() throws RecognitionException {
        UuvContext _localctx = new UuvContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_uuv);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                match(T__1);
                setState(85);
                match(T__2);
                setState(86);
                match(NAME);
                setState(87);
                match(ASSIGN);
                setState(88);
                ((UuvContext) _localctx).name = match(ID);
                setState(89);
                match(SPEED);
                setState(90);
                match(ASSIGN);
                setState(91);
                ((UuvContext) _localctx).min = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == DOUBLE || _la == INT)) {
                    ((UuvContext) _localctx).min = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(92);
                match(T__3);
                setState(93);
                ((UuvContext) _localctx).max = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == DOUBLE || _la == INT)) {
                    ((UuvContext) _localctx).max = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(94);
                match(T__3);
                setState(95);
                ((UuvContext) _localctx).steps = match(INT);
                setState(96);
                match(SENSORS);
                setState(97);
                match(ASSIGN);
                setState(98);
                ((UuvContext) _localctx).sensors = match(BEGL);
                setState(100);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(99);
                        elems();
                    }
                }

                setState(102);
                match(ENDL);
                setState(103);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModelContext extends ParserRuleContext {
        public ModelContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterModel(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitModel(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_model;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitModel(this);
            else return visitor.visitChildren(this);
        }

        public List<HostContext> host() {
            return getRuleContexts(HostContext.class);
        }

        public HostContext host(int i) {
            return getRuleContext(HostContext.class, i);
        }

        public List<InvocationContext> invocation() {
            return getRuleContexts(InvocationContext.class);
        }

        public InvocationContext invocation(int i) {
            return getRuleContext(InvocationContext.class, i);
        }

        public List<MissionNameContext> missionName() {
            return getRuleContexts(MissionNameContext.class);
        }

        public MissionNameContext missionName(int i) {
            return getRuleContext(MissionNameContext.class, i);
        }

        public List<PortStartContext> portStart() {
            return getRuleContexts(PortStartContext.class);
        }

        public PortStartContext portStart(int i) {
            return getRuleContext(PortStartContext.class, i);
        }

        public List<SensorPortContext> sensorPort() {
            return getRuleContexts(SensorPortContext.class);
        }

        public SensorPortContext sensorPort(int i) {
            return getRuleContext(SensorPortContext.class, i);
        }

        public List<SimulationContext> simulation() {
            return getRuleContexts(SimulationContext.class);
        }

        public SimulationContext simulation(int i) {
            return getRuleContext(SimulationContext.class, i);
        }

        public List<SpeedContext> speed() {
            return getRuleContexts(SpeedContext.class);
        }

        public SpeedContext speed(int i) {
            return getRuleContext(SpeedContext.class, i);
        }

        public List<UuvContext> uuv() {
            return getRuleContexts(UuvContext.class);
        }

        public UuvContext uuv(int i) {
            return getRuleContext(UuvContext.class, i);
        }
    }

    public static class SensorPortContext extends ParserRuleContext {
        public Token value;

        public SensorPortContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode INT() {
            return getToken(UUVParser.INT, 0);
        }

        public TerminalNode SENSOR_PORT() {
            return getToken(UUVParser.SENSOR_PORT, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterSensorPort(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitSensorPort(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_sensorPort;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitSensorPort(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MissionNameContext extends ParserRuleContext {
        public Token value;

        public MissionNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode ID() {
            return getToken(UUVParser.ID, 0);
        }

        public TerminalNode MISSION_NAME() {
            return getToken(UUVParser.MISSION_NAME, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterMissionName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitMissionName(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_missionName;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitMissionName(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class PortStartContext extends ParserRuleContext {
        public Token value;

        public PortStartContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode INT() {
            return getToken(UUVParser.INT, 0);
        }

        public TerminalNode PORT_START() {
            return getToken(UUVParser.PORT_START, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterPortStart(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitPortStart(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_portStart;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitPortStart(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SimulationContext extends ParserRuleContext {
        public Token value;

        public SimulationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode INT() {
            return getToken(UUVParser.INT, 0);
        }

        public TerminalNode SIMULATION_TIME() {
            return getToken(UUVParser.SIMULATION_TIME, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterSimulation(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitSimulation(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_simulation;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitSimulation(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SpeedContext extends ParserRuleContext {
        public Token value;

        public SpeedContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode INT() {
            return getToken(UUVParser.INT, 0);
        }

        public TerminalNode SIMULATION_SPEED() {
            return getToken(UUVParser.SIMULATION_SPEED, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterSpeed(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitSpeed(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_speed;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitSpeed(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class InvocationContext extends ParserRuleContext {
        public Token value;

        public InvocationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode DOUBLE() {
            return getToken(UUVParser.DOUBLE, 0);
        }

        public TerminalNode INT() {
            return getToken(UUVParser.INT, 0);
        }

        public TerminalNode TIME_WINDOW() {
            return getToken(UUVParser.TIME_WINDOW, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterInvocation(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitInvocation(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_invocation;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitInvocation(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class HostContext extends ParserRuleContext {
        public Token value;

        public HostContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ASSIGN() {
            return getToken(UUVParser.ASSIGN, 0);
        }

        public TerminalNode IP() {
            return getToken(UUVParser.IP, 0);
        }

        public TerminalNode SERVER_HOST() {
            return getToken(UUVParser.SERVER_HOST, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterHost(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitHost(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_host;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitHost(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ListContext extends ParserRuleContext {
        public ListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode BEGL() {
            return getToken(UUVParser.BEGL, 0);
        }

        public TerminalNode ENDL() {
            return getToken(UUVParser.ENDL, 0);
        }

        public ElemsContext elems() {
            return getRuleContext(ElemsContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitList(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_list;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitList(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ElemsContext extends ParserRuleContext {
        public ElemsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TerminalNode> SEP() {
            return getTokens(UUVParser.SEP);
        }

        public TerminalNode SEP(int i) {
            return getToken(UUVParser.SEP, i);
        }

        public List<ElemContext> elem() {
            return getRuleContexts(ElemContext.class);
        }

        public ElemContext elem(int i) {
            return getRuleContext(ElemContext.class, i);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterElems(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitElems(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_elems;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitElems(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ElemContext extends ParserRuleContext {
        public ElemContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode ID() {
            return getToken(UUVParser.ID, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterElem(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitElem(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_elem;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitElem(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class UuvContext extends ParserRuleContext {
        public Token name;
        public Token min;
        public Token max;
        public Token steps;
        public Token sensors;

        public UuvContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TerminalNode> ASSIGN() {
            return getTokens(UUVParser.ASSIGN);
        }

        public TerminalNode ASSIGN(int i) {
            return getToken(UUVParser.ASSIGN, i);
        }

        public TerminalNode BEGL() {
            return getToken(UUVParser.BEGL, 0);
        }

        public List<TerminalNode> DOUBLE() {
            return getTokens(UUVParser.DOUBLE);
        }

        public TerminalNode DOUBLE(int i) {
            return getToken(UUVParser.DOUBLE, i);
        }

        public TerminalNode ENDL() {
            return getToken(UUVParser.ENDL, 0);
        }

        public TerminalNode ID() {
            return getToken(UUVParser.ID, 0);
        }

        public List<TerminalNode> INT() {
            return getTokens(UUVParser.INT);
        }

        public TerminalNode INT(int i) {
            return getToken(UUVParser.INT, i);
        }

        public TerminalNode NAME() {
            return getToken(UUVParser.NAME, 0);
        }

        public TerminalNode SENSORS() {
            return getToken(UUVParser.SENSORS, 0);
        }

        public TerminalNode SPEED() {
            return getToken(UUVParser.SPEED, 0);
        }

        public ElemsContext elems() {
            return getRuleContext(ElemsContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).enterUuv(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof UUVListener) ((UUVListener) listener).exitUuv(this);
        }

        @Override
        public int getRuleIndex() {
            return RULE_uuv;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof UUVVisitor) return ((UUVVisitor<? extends T>) visitor).visitUuv(this);
            else return visitor.visitChildren(this);
        }
    }
}